--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,7 @@
 	font-weight: 500;
 	line-height: 24px;
 	border-radius: 10px;
+    cursor: pointer;
 	transition: ease .40s;
     align-items: center;
 }
@@ -94,7 +95,7 @@
 }
 .products h1{
     text-align: center;
-    color: whitesmoke;
+    color: #212121 ;
     padding: 30px 0 30px 0;
 }
 .product-grid-2 {
@@ -124,7 +125,7 @@
 }
 
 .product-card p {
-    color: #ff4081;
+    color:#218380;
     font-weight: bold;
 }
 .contact footer{
