--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,7 @@
 .product-card {
     background:whitesmoke;
     padding: 15px;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
     width: 200px;
 }
@@ -182,8 +182,51 @@ footer p{
 .product-card img {
     width: 100%;
     transition: transform 0.3s ease;
+    border-radius: 15px;
+    border: .1 px solid black;
 }
-
 .product-card:hover img {
     transform: scale(1.05);
+}
+.flexUl {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.flexUl a {
+    text-decoration: none;
+}
+
+.flexUl li {
+    list-style: none;
+}
+
+.flexUl li i {
+    height: 35px;
+    width: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+}
+
+.fa-brands {
+    margin-top: 1rem;
+    cursor: pointer;
+    color: white;
+    padding: 0.5rem;
+    border-radius: 50%;
+}
+
+.fa-google {
+    background-color: orangered;
+}
+
+.fa-twitter {
+    background-color: rgb(43, 71, 228);
+}
+
+.fa-facebook-f {
+    background-color: darkblue;
 }
